--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,74 +1,70 @@
 <div class="themes">
   <div style="height: 64px"> </div>
   <section class="p-4">
-    <ng-container *ngIf="selectedMenu == ''">
-      <app-menu [selectedMenu]="selectedMenu" (selectedMenuChanges)="changeMenu($event)"></app-menu>
-    </ng-container>
-
-    <ng-container *ngIf="selectedMenu == 'surahdetail'">
-      <app-suratdetail [play]="play" [surahData]="surahData" [surahDataNext]="surahDataNext"
-        [surahDataPrev]="surahDataPrev" [selectedMenu]="selectedMenu" (selectedMenuChanges)="changeMenu($event)"
-        (bottomOpenChanges)="bottomOpenComp($event)" (suratChanges)="surahDetail($event)"
-        (playChanges)="playComp($event)"></app-suratdetail>
-    </ng-container>
-
-    <ng-container *ngIf="selectedMenu == 'surah'">
-      <app-surat [selectedMenu]="selectedMenu" (selectedMenuChanges)="changeMenu($event)"
-        (bottomOpenChanges)="bottomOpenComp($event)" (suratChanges)="surahDetail($event)"></app-surat>
-    </ng-container>
-
-    <ng-container *ngIf="selectedMenu == 'jadwalsholat'">
-      <app-jadwalsholat [selectedMenu]="selectedMenu" (selectedMenuChanges)="changeMenu($event)"
-        (bottomOpenChanges)="bottomOpenComp($event)"></app-jadwalsholat>
-    </ng-container>
-
-    <ng-container *ngIf="selectedMenu == 'tentang'">
-      <app-about [selectedMenu]="selectedMenu" (selectedMenuChanges)="changeMenu($event)"
-        (bottomOpenChanges)="bottomOpenComp($event)"></app-about>
-    </ng-container>
-
-    <ng-container *ngIf="selectedMenu == 'juzamma'">
-      <app-juzamma [selectedMenu]="selectedMenu" (selectedMenuChanges)="changeMenu($event)"
-        (bottomOpenChanges)="bottomOpenComp($event)"></app-juzamma>
-    </ng-container>
-
-    <ng-container *ngIf="selectedMenu == 'wirid'">
-      <app-wirid [selectedMenu]="selectedMenu" (selectedMenuChanges)="changeMenu($event)"
-        (bottomOpenChanges)="bottomOpenComp($event)"></app-wirid>
-    </ng-container>
-
-    <ng-container *ngIf="selectedMenu == 'ayatkursi'">
-      <app-ayatkursi [selectedMenu]="selectedMenu" (selectedMenuChanges)="changeMenu($event)"
-        (bottomOpenChanges)="bottomOpenComp($event)"></app-ayatkursi>
-    </ng-container>
-
-    <ng-container *ngIf="selectedMenu == 'asmaul'">
-      <app-asmaulhusna [selectedMenu]="selectedMenu" (selectedMenuChanges)="changeMenu($event)"
-        (bottomOpenChanges)="bottomOpenComp($event)"></app-asmaulhusna>
-    </ng-container>
-
-    <ng-container *ngIf="selectedMenu == 'doa'">
-      <app-doa [selectedMenu]="selectedMenu" (selectedMenuChanges)="changeMenu($event)"
-        (bottomOpenChanges)="bottomOpenComp($event)"></app-doa>
-    </ng-container>
-
-    <ng-container *ngIf="selectedMenu == 'tahlil'">
-      <app-tahlil [selectedMenu]="selectedMenu" (selectedMenuChanges)="changeMenu($event)"
-        (bottomOpenChanges)="bottomOpenComp($event)"></app-tahlil>
-    </ng-container>
+    @switch (selectedMenu) {
+      @case ("") {
+        <app-menu [selectedMenu]="selectedMenu" (selectedMenuChanges)="changeMenu($event)"></app-menu>
+      }
+      @case ("surahdetail") {
+        <app-suratdetail [play]="play" [surahData]="surahData" [surahDataNext]="surahDataNext"
+          [surahDataPrev]="surahDataPrev" [selectedMenu]="selectedMenu" (selectedMenuChanges)="changeMenu($event)"
+          (bottomOpenChanges)="bottomOpenComp($event)" (suratChanges)="surahDetail($event)"
+          (playChanges)="playComp($event)"></app-suratdetail>
+      }
+      @case ("surah") {
+        <app-surat [selectedMenu]="selectedMenu" (selectedMenuChanges)="changeMenu($event)"
+          (bottomOpenChanges)="bottomOpenComp($event)" (suratChanges)="surahDetail($event)"></app-surat>
+      }
+      @case ("jadwalsholat") {
+        <app-jadwalsholat [selectedMenu]="selectedMenu" (selectedMenuChanges)="changeMenu($event)"
+          (bottomOpenChanges)="bottomOpenComp($event)"></app-jadwalsholat>
+      }
+      @case ("tentang") {
+        <app-about [selectedMenu]="selectedMenu" (selectedMenuChanges)="changeMenu($event)"
+          (bottomOpenChanges)="bottomOpenComp($event)"></app-about>
+      }
+      @case ("juzamma") {
+        <app-juzamma [selectedMenu]="selectedMenu" (selectedMenuChanges)="changeMenu($event)"
+          (bottomOpenChanges)="bottomOpenComp($event)"></app-juzamma>
+      }
+      @case ("wirid") {
+        <app-wirid [selectedMenu]="selectedMenu" (selectedMenuChanges)="changeMenu($event)"
+          (bottomOpenChanges)="bottomOpenComp($event)"></app-wirid>
+      }
+      @case ("ayatkursi") {
+        <app-ayatkursi [selectedMenu]="selectedMenu" (selectedMenuChanges)="changeMenu($event)"
+          (bottomOpenChanges)="bottomOpenComp($event)"></app-ayatkursi>
+      }
+      @case ("asmaul") {
+        <app-asmaulhusna [selectedMenu]="selectedMenu" (selectedMenuChanges)="changeMenu($event)"
+          (bottomOpenChanges)="bottomOpenComp($event)"></app-asmaulhusna>
+      }
+      @case ("doa") {
+        <app-doa [selectedMenu]="selectedMenu" (selectedMenuChanges)="changeMenu($event)"
+          (bottomOpenChanges)="bottomOpenComp($event)"></app-doa>
+      }
+      @case ("tahlil") {
+        <app-tahlil [selectedMenu]="selectedMenu" (selectedMenuChanges)="changeMenu($event)"
+          (bottomOpenChanges)="bottomOpenComp($event)"></app-tahlil>
+      }
+    }
   </section>
-
-  <ng-container *ngIf="bottom || play">
+  
+  @if (bottom || play) {
     <div class="bottominfo" [ngStyle]="{'width.px': appData.width, 'z-index': 5}">
       <div class="bottominfotitle flex items-center justify-between">
-        <div class="flex items-center gap-2" *ngIf="play">
-          <div class="playrecord"></div>
-          <div class="font-bold">{{ bottomTitle }}</div>
-        </div>
-        <div class="flex items-center gap-2" *ngIf="!play">
-          <div>💠</div>
-          <div class="font-bold">{{ bottomTitle }}</div>
-        </div>
+        @if (play) {
+          <div class="flex items-center gap-2">
+            <div class="playrecord"></div>
+            <div class="font-bold">{{ bottomTitle }}</div>
+          </div>
+        }
+        @if (!play) {
+          <div class="flex items-center gap-2">
+            <div>💠</div>
+            <div class="font-bold">{{ bottomTitle }}</div>
+          </div>
+        }
         <div class="iconaction flex items-center justify-center pointer" (click)="play ? stopAudio() : closeBottom()">
           <i class="material-icons">
             close
@@ -76,7 +72,7 @@
         </div>
       </div>
       <div class="bottomcontent p-4 flex flex-col gap-4">
-        <ng-container *ngIf="play">
+        @if (play) {
           <div class="flex items-center justify-between">
             <div>
               {{ start }}
@@ -88,24 +84,28 @@
           <div class="mt-2 w-full">
             <mat-progress-bar mode="determinate" [value]="(startDuration / duration) * 100"></mat-progress-bar>
           </div>
-        </ng-container>
-        <ng-container *ngIf="!play">
-          <div class="bottomterjemahan text-xs" *ngIf="bottomTerjemahan">
-            <div class="flex items-start gap-2 mb-2">
-              <div class="font-bold">🔸</div>
-              <div>Terjemahan:</div>
+        }
+        @if (!play) {
+          @if (bottomTerjemahan) {
+            <div class="bottomterjemahan text-xs">
+              <div class="flex items-start gap-2 mb-2">
+                <div class="font-bold">🔸</div>
+                <div>Terjemahan:</div>
+              </div>
+              {{ bottomTerjemahan }}
             </div>
-            {{ bottomTerjemahan }}
-          </div>
-          <div class="bottomterjemahan text-xs" *ngIf="bottomTafsir">
-            <div class="flex items-start gap-2 mb-2">
-              <div class="font-bold">🔸</div>
-              <div>Tafsir:</div>
+          }
+          @if (bottomTafsir) {
+            <div class="bottomterjemahan text-xs">
+              <div class="flex items-start gap-2 mb-2">
+                <div class="font-bold">🔸</div>
+                <div>Tafsir:</div>
+              </div>
+              {{ bottomTafsir }}
             </div>
-            {{ bottomTafsir }}
-          </div>
-        </ng-container>
+          }
+        }
       </div>
     </div>
-  </ng-container>
+  }
 </div>
