--- a/src/app/components/ngx-scroll-to-top/ngx-scroll-to-top.component.html
+++ b/src/app/components/ngx-scroll-to-top/ngx-scroll-to-top.component.html
@@ -1,3 +1,5 @@
-<div class="to-top pointer" (click)="scrollToTop()" *ngIf="isShow" [ngStyle]="{ right: rightPosition, bottom: bottomPosition }">
-    <i class="material-icons"> arrow_upward </i>
-</div>
+@if (isShow) {
+    <div class="to-top pointer" (click)="scrollToTop()" [ngStyle]="{ right: rightPosition, bottom: bottomPosition }">
+        <i class="material-icons"> arrow_upward </i>
+    </div>
+}
