--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -35,7 +35,7 @@
         <app-ayatkursi [selectedMenu]="selectedMenu" (selectedMenuChanges)="changeMenu($event)"
           (bottomOpenChanges)="bottomOpenComp($event)"></app-ayatkursi>
       }
-      @case ("asmaul") {
+      @case ("asmaulhusna") {
         <app-asmaulhusna [selectedMenu]="selectedMenu" (selectedMenuChanges)="changeMenu($event)"
           (bottomOpenChanges)="bottomOpenComp($event)"></app-asmaulhusna>
       }
