--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -129,13 +129,15 @@ app-home {}
 .makkiyah {
   padding: 2px 4px;
   border-radius: 6px;
-  color: #ba6b2a;
-  background-color: #f7dcc6;
+  font-weight: 600;
+  color: #613512;
+  // background-color: #faeadd;
 }
 
 .madaniyah {
   padding: 2px 4px;
   border-radius: 6px;
-  color: #40996b;
-  background-color: #ddffed;
+  font-weight: 600;
+  color: #064725;
+  // background-color: #ebfdf3;
 }
