--- a/src/app/modules/others/notfound/notfound.component.html
+++ b/src/app/modules/others/notfound/notfound.component.html
@@ -1,7 +1,7 @@
 <div class="flex items-center justify-center themes themes mt-8">
     <div class="space-section">
         <div class="notfound text-center">
-            <img ixImg loading="lazy" src="assets/404.svg" alt="notfound" />
+            <img loading="lazy" src="assets/404.svg" alt="notfound"/>
 
             <div class="text-2xl font-bold mt-10">Oops!</div>
 
